--- a/headline2.css
+++ b/headline2.css
@@ -306,9 +306,9 @@
     /* border: 1px solid red; */
     height: 40px;
     width: 801px;
-    position: absolute;
-    bottom: -365px;
-    left: 400px;
+    position: relative;
+    bottom: 30px;
+    left: 40px;
     margin-bottom: -27px;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 12px;
