--- a/headline3.css
+++ b/headline3.css
@@ -291,7 +291,7 @@
 }
 .img{
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 70px;
 }
 
 .img>img{
@@ -305,10 +305,10 @@
 .bottom-left{
     /* border: 1px solid red; */
     height: 40px;
-    width: 801px;
-    position: absolute;
-    bottom: -360px;
-    left: 400px;
+    width: 802px;
+    position: relative;
+    bottom: 70px;
+    left: 40px;
     margin-bottom: -120px;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 12px;
