--- a/headline6.css
+++ b/headline6.css
@@ -303,10 +303,10 @@
 .bottom-left{
     /* border: 1px solid red; */
     height: 20px;
-    width: 801px;
-    position: absolute;
-    bottom: -351px;
-    left: 400px;
+    width: 802px;
+    position: relative;
+    bottom: 30px;
+    left: 40px;
     margin-bottom: -40px;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 12px;
