--- a/left-part.css
+++ b/left-part.css
@@ -4,7 +4,7 @@
         font-family: BentonSans,Arial,Noto Sans,sans-serif;
     }
 
-    /*head start*/
+   /*head start*/
 #head{
     background-color: #0a9bdf;
     width: 100%;
@@ -19,7 +19,19 @@
     height: 257px;
 
 }
-
+.singUp:hover{
+    font-weight: bold;
+    border-bottom: 3px white solid;
+    cursor:pointer
+}
+.singUp{
+    color: white;
+}
+.active_matches{
+    font-weight: bold;
+    border-bottom: 3px white solid;
+    cursor:pointer
+}
 #match_box_text{
     margin-top: 10px;
     color: white;
@@ -37,9 +49,9 @@
 }
 #match_box_body{
     display: grid;
-    grid-template-columns: repeat(3,400px);
-    grid-template-rows: repeat(3,200px);
-    gap:20px;
+    grid-template-columns: repeat(3,350px);
+    grid-template-rows: repeat(3,170px);
+    gap:10px;
 
 }
 .match_box{
@@ -52,20 +64,22 @@
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .match_headline{
-    margin-top: 10px;
+    font-size: 12px;
+    margin-top: 13px;
     margin-left: 15px;
 }
 .team_1{
     /* border: 1px red solid; */
     display: flex;
     justify-content: space-between;
-    padding-top: 10px;
+    padding-top: 5px;
    width: 92%;
    margin: auto;
 }
 .team1_split{
     display: flex;
-    /* border: 1px red solid; */  
+    /* border: 1px red solid; */
+   
     
 }
 .team_logo>img{
@@ -74,12 +88,13 @@
 .team_name{
     height: 30px;
     margin-left: 15px;
-    font-size: 20px;
+    font-size: 15px;
     padding-top: 5px;
+    font-weight: bold;
 }
 .team1_live_score{
     padding-top: 8px;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: bold;
 }
 .bottom_table{
@@ -88,14 +103,16 @@
 .bottom_table>p{
     margin-left: 15px;
     padding-top: 10px;
-    margin-right: 15px;
+    margin-right: 5px;
+    font-weight: 600;
+    font-size: 13px;
 }
 .bottom_table>p:hover{
         border-bottom: 2px black solid;
         cursor: pointer;
 }
 .bottom_table_p{
-    font-size: 15px;
+    font-size: 12px;
     margin-left: 15px;
     margin-bottom: 8px;
 }
@@ -109,11 +126,15 @@
 /*-------------------------------------------------------------------------------------------------------------------------NavBar Start*/
 /* navbar Start */
 #navbar{
-   
+    /* margin-top: -25px; */
     background-color: #03A9Fa;
     width: 100%;
+    position: sticky;
+    top: 0;
+    
 }
 #navbar_body{
+    
     background-color: #03A9Fa;
     width: 85%;
     margin: auto;
@@ -147,7 +168,7 @@
 .nav_info>span{
     color: white;
     margin-right: 20px;
-    font-size: 20px;
+    font-size: 16px;
 }
 .nav_info>span:hover{
     cursor: pointer;
@@ -165,7 +186,7 @@
 .nav_icons>span{
     color: white;
     margin-right: 20px;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .nav_icons>span:hover{
@@ -184,7 +205,7 @@
     margin-right: -10px;
     
 }
-/* navbar end */
+/* navbar end ========================================================================Bottom Navbar======================================*/
 
     body{
         background-color: aliceblue;
