--- a/left-part.css
+++ b/left-part.css
@@ -234,6 +234,7 @@
         margin: auto;
         height: 56px;
         position: sticky;
+        top: 50px;
         /* border: 1px solid black; */
         background-color: #ffffff;
     }
@@ -277,19 +278,14 @@
     }
     #mid-box-inside{
         border: .1px solid rgb(235, 232, 232);
-        /* padding: 20px; */
         background-color: white;;
         border-radius: 10px;
         margin-bottom: 15px;
     }
-
     #mid-img{
         border-radius: 15px;
         transition: all 0.3s;
-        /* display: block; */
-        width: 100%;
-        height: auto;
-        transform: scale(1);
+        /* transform: scale(1); */
     }
     #mid-img:hover{
         transform: scale(1.05);
@@ -298,10 +294,9 @@
     #mid-img1{
         border-radius: 15px;
         transition: all 0.3s;
-        /* display: block; */
         width: 100%;
         height: auto;
-        transform: scale(1);
+        /* transform: scale(1); */
     }
     #mid-img1:hover{
         transform: scale(1.02);
