--- a/left-part.css
+++ b/left-part.css
@@ -387,3 +387,32 @@ h6{
     margin-top: 15px; 
     margin-bottom: 8px;
 }
+
+@media(max-width:998px){
+    html{
+        font-size: 150%;
+        margin: auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        grid-template-rows: auto;
+    }
+     #match_box_body{
+        width: 55%;
+    } 
+    
+}
+@media(max-width:768px){
+    html{
+        font-size: 150%;
+        margin: auto;
+        align-items: center;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+    #match_box_body{
+        width: 45%;
+    }
+   
+}
