--- a/style.css
+++ b/style.css
@@ -214,6 +214,143 @@
     margin-right: -10px;
     
 }
+
+
+/* ////////// */
+
+ .hide_phone{
+color: white;
+margin-left: 20px;
+}
+
+
+  .hide_phone:hover{
+    cursor: pointer; 
+} 
+.dropbtn {
+    /* background-color:rgb(0, 174, 255);   */
+    color: white;
+    padding: 10px;
+    font-size: 15px;
+    border: none;
+    
+    font-family: BentonSans,Arial,Noto Sans,sans-serif;
+} 
+
+.dropbox{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+     gap:20px; 
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+    
+  }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 180px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    font-family: BentonSans,Arial,Noto Sans,sans-serif;
+    font-size: 15px;
+  }
+
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropbtn:hover{
+      cursor: pointer;
+  }
+
+  .dropdown-content a:hover {background-color: lightblue;}
+
+  .dropdown:hover .dropdown-content {display: block;}
+
+
+
+
+/* #navbar{
+    background-color: #03A9Fa;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    
+}
+#navbar_body{
+    
+    background-color: #03A9Fa;
+    width: 85%;
+    margin: auto;
+    height: 50px;
+ 
+    display: flex;
+}
+.nav_img{
+ 
+    width: 12%;
+    height: 98%;
+    display: flex;
+}
+.nav_img>img{
+    width: 100%;
+    height: 50%;
+    margin-top: 10px;
+}
+.nav_info{
+
+    width: 43%;
+    height: 98%;
+    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav_info>span{
+    color: white;
+    margin-right: 20px;
+    font-size: 16px;
+}
+.nav_info>span:hover{
+    cursor: pointer;
+}
+
+.nav_icons{
+    width: 43%;
+    height: 98%;
+    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav_icons>span{
+    color: white;
+    margin-right: 20px;
+    font-size: 16px;
+}
+
+.nav_icons>span:hover{
+    cursor: pointer;
+}
+
+.nav_Ficon{
+  
+    height: 100%;
+    
+}
+.nav_Ficon>img{
+   margin-top: 10px;
+    height: 60%;
+    margin-right: -10px;
+    
+} */
 /* navbar end ========================================================================Bottom Navbar======================================*/
 
 /* bottom navbar*/
@@ -639,6 +776,7 @@ a{
     margin-top: 15px;
     width: 90%;
     border-radius: 20px;
+    
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -657,6 +795,7 @@ a{
 }
 .container_right_inner_div2>.zoomEf>img:hover{
     transform: scale(1.1);
+    
 }
 .container_right_inner_div2>a>.zoomEf>img{
     /* margin-top: 15px;
@@ -665,12 +804,15 @@ a{
     display: block;
     margin-left: auto;
     margin-right: auto; */
+    
     width: 100%;
-   
+    /* position: static; */
     transition: 0.5s all ease-in-out;
 }
 .container_right_inner_div2>a>.zoomEf>img:hover{
     transform: scale(1.1);
+    position: static;
+  
 }
 .zoomEf{
     /* width: 90%;
@@ -832,6 +974,32 @@ a{
     border-radius: 20px ;
 }
 
+.hide-mid{
+    display: none;
+}
+.info_shift{
+  
+    margin-left: -14px;
+    padding: 0px;
+    font-size: 14px;
+
+}
+.fantasy{
+   
+    padding: 0px;
+    margin-left: 20px;
+}
+/* .ed_in{
+    border: 1px black solid;
+    padding: 0px;
+    font-size: 12px;
+    margin-right: 20px;
+} */
+.en-hi{
+    
+    padding: 0px;
+    margin-left: 10px;
+}
 
 }
 
@@ -861,5 +1029,24 @@ a{
         font-size: 24px;
    }
    
+   .info_shift{
+    display: none;
+
+ }
+ .ph_hide{
+     display: none;
+ }
+ .ph_img{
+     padding-right: 70px;
+ }
+ .ph_img>img{
+     width: 100%;
+ }
+ .nav_img{
+     width: 20%;
+ }
+ .img_in{
+     width: 20%;
+ }
 
 }
